# utils

./: .gitmodules  CMakeLists.txt  README.md
args/: Makefile  args.cpp  args.h  main  main.cpp
src/utilslib/: logger.hpp  lookuptable.hpp  register.hpp  singleton.hpp  stringserializer.hpp
src/utilslib/args/: Makefile  args.cpp  main.cpp
src/utilslib/callbacks/: callbacks.hpp
unittests/: CMakeLists.txt  callbacks.cpp  logger.cpp  lookuptable.cpp  register.cpp
